includedir=$(includedir)/hydrafs

include_HEADERS = global.h
include_HEADERS += log.h
include_HEADERS += conf.h
include_HEADERS += dir_tree.h 
include_HEADERS += s3client_pool.h
include_HEADERS += s3fuse.h
include_HEADERS += s3http_client.h
include_HEADERS += s3http_connection.h
include_HEADERS += file_io_ops.h
include_HEADERS += cache_mng.h
include_HEADERS += stat_srv.h
include_HEADERS += range.h
include_HEADERS += utils.h
